# Legal-Services-Management-Tool

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json
.github/workflows/: build.yml
docs/superpowers/plans/: 2026-06-10-liquid-glass-drafting-redesign-plan.md
docs/superpowers/specs/: 2026-06-10-liquid-glass-drafting-redesign-spec.md
src/: App.css  App.tsx  ErrorBoundary.tsx  domain.ts  encouragements.ts  inbox.ts  index.css  storage.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  attachments.rs  config.rs  demo.rs  drafting.rs  inbox.rs  lib.rs  litigation_organizer.rs  main.rs  notes.rs  workspace.rs
src/components/: AiAssistant.tsx  AttachmentDrawer.tsx  BrandLogo.tsx  CalendarMonthView.tsx  ConflictAnalyzer.tsx  Dashboard.tsx  DocumentDrafter.tsx  DynamicForm.tsx  InboxPanel.tsx  LitigationCaseOrganizer.tsx  Metric.tsx  ModulePanel.tsx  NavButton.tsx  NoteListPanel.tsx  Onboarding.tsx  WordStatsAutofill.tsx
src/components/settings/: AboutTab.tsx  AiSettingsTab.tsx  FieldSettingsTab.tsx  GeneralSettingsTab.tsx  PromptPreview.tsx  SettingsPage.tsx
src/shared/: constants.ts  date.ts  relations.ts  utils.ts
src/storage/: ai.ts  app-state.ts  attachments.ts  conflict-analysis.ts  csv-export.ts  drafting-logic.test.ts  drafting-logic.ts  drafting.ts  extraction.ts  file-reader.ts  index.ts  litigation-organizer.ts  notes.ts  records.ts  workspace.ts
